b0.5.2
* added check metadata
  * created CheckMetadata class
  * added creator and getter metadata methods to TransactionEntry
  * added check metadata to advanced transaction metadata tab
    * integrated at a basic level
    * option for incomplete added
  * added support for check metadata to DataHandler
  * added CheckGui
  * added checkmeta to TransactionEntry.print

v0.5.1
* rationalized alpha
* fixed new/edit transaction gui
  * fixed Meta tab in entry edit not functioning correctly
  * removed t+ notation
* added LDate formatting options
* added date to PositionGui
* added artifacts to meta tables

v0.5.0
* minor bug fixes and optimizations
  * replaced calls to "Instance.main.encode" with "Instance.$"
  * menus section of main gui made more readable
* removal of extra data files
  * removed special, it's no longer needed
  * moved contents of extranious to accounts
* reworked of budgets
  * restructured budget entry
  * reworked budget guis
* reworked loading and saving of entries and backing elements
  * handled empty due to deletion
  * rationalized Instance
  * made reload more extensive and added save
* removed obnoxious trace statements
* editing accounts metadata in gui
* reworked Json
  * reworked JsonObject
  * reworked JsonArray

v0.4.2
* dated conversion fixed
* minor typo corrections
* better error printing
* fixed bug in menu
* made MainGui more readable

v0.4.1
* conversion fixed
* Gwei and Wei now have correct names
* fixed title for NewTransactionEntryGui
* fixed profile gui
* fixed AppDepGui
* started including more in release files

v0.4.0
* began keeping a permanent changelog
* removed all instances of "amnt", "cst", "xchg", and "cncl" as a variable name and in code
* removed all instances of "this.getClass()"
* added loop to ensure File IO works properly for defaults
* changed hang to allow password to be entered to something less processor intense
* overhauled Instance.convert()
  * added date to conversion gui